
* Extended type annotation in objectify: cleaner annotation namespace setup
  plus new ``deannotate()`` function

* Support for custom Element class instantiation in lxml.sax: passing a
  ``makeelement()`` function to the ElementTreeContentHandler will reuse the
  lookup context of that function

* '.' represents empty ObjectPath (identity)

Bugs fixed
----------

* Replacing the children slice of an Element would cut off the tails of the
  original children

* ``Element.getiterator(tag)`` did not accept ``Comment`` and
  ``ProcessingInstruction`` as tags

* API functions now check incoming strings for XML conformity.  Zero bytes or
  low ASCII characters are no longer accepted.

* XSLT parsing failed to pass resolver context on to imported documents

* More ET compatible behaviour when writing out XML declarations or not

* ``Element.attrib`` was missing ``clear()`` and ``pop()`` methods

* More robust error handling in ``iterparse()``

* Documents lost their top-level PIs and comments on serialisation

* lxml.sax failed on comments and PIs. Comments are now properly ignored and
  PIs are copied.

* Raise AssertionError when passing strings containing '\0' bytes


1.3beta (2007-02-27)
====================

Features added
--------------

* ``DTD`` validator class (like ``RelaxNG`` and ``XMLSchema``)

* HTML generator helpers by Fredrik Lundh in ``lxml.htmlbuilder``

* ``ElementMaker`` XML generator by Fredrik Lundh in ``lxml.builder.E``

* Support for pickeling ``objectify.ObjectifiedElement`` objects to XML

* ``update()`` method on Element.attrib

* Optimised replacement for libxml2's _xmlReconsiliateNs(). This allows lxml
  a better handling of namespaces when moving elements between documents.

Bugs fixed
----------

* Possible memory leaks in namespace handling when moving elements between
  documents

Other changes
-------------

* major restructuring in the documentation


1.2.1 (2007-02-27)
==================

Bugs fixed
----------
